--- a/src/pages/purchase/purchase.css
+++ b/src/pages/purchase/purchase.css
@@ -1,12 +1,15 @@
 .purchase {
-  padding: 6rem 0;
+  padding: 3rem 0;
   min-height: 20vh;
   max-height: auto;
   background-color: var(--whiteColor);
   overflow: hidden;
 }
 .payment__title {
-  font-size: 3.5rem !important;
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: var(--orangeColor);
+  margin-bottom: 5rem;
 }
 .purchase__txt-ar {
   font-family: "Almarai";
@@ -20,7 +23,7 @@
 }
 .purchase__form-input {
   /* height: 5rem; */
-  padding: 1rem 2rem !important;
+  padding: 0.6rem 2rem !important;
   font-size: 1.6rem !important;
 }
 .purchase__left {
